tests/snapshots/goto_nested_if.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut r: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                let _v0: i32 = 0;
                __retval = _v0;
                let _v1: i32 = 3;
                a = _v1;
                let _v2: i32 = -1;
                b = _v2;
                {
                    let _v3: i32 = a;
                    let _v4: i32 = 0;
                    let _v5: bool = _v3 > _v4;
                    if _v5 {
                        {
                            let _v6: i32 = b;
                            let _v7: i32 = 0;
                            let _v8: bool = _v6 > _v7;
                            if _v8 {
                                __state0 = 1;
                                continue '__dispatch0;
                            } else {
                                __state0 = 2;
                                continue '__dispatch0;
                            }
                        }
                    } else {
                        __state0 = 3;
                        continue '__dispatch0;
                    }
                }
                __state0 = 1;
                continue '__dispatch0;
            }
            1 => {
                let _v9: i32 = 1;
                r = _v9;
                __state0 = 4;
                continue '__dispatch0;
            }
            2 => {
                let _v10: i32 = 2;
                r = _v10;
                __state0 = 4;
                continue '__dispatch0;
            }
            3 => {
                let _v11: i32 = 3;
                r = _v11;
                __state0 = 4;
                continue '__dispatch0;
            }
            4 => {
                let _v12: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
                let _v13: i32 = r;
                let _v14: i32 = unsafe { printf(_v12 as *const i8, _v13) };
                let _v15: i32 = 0;
                __retval = _v15;
                let _v16: i32 = __retval;
                std::process::exit(_v16 as i32);
            }
            _ => {
                break '__dispatch0;
            }
        }
    }
}
