tests/snapshots/goto_return_value.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn classify(arg0: i32) -> i32 {
    let mut n: i32 = 0;
    let mut __retval: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                n = arg0;
                {
                    let _v0: i32 = n;
                    let _v1: i32 = 0;
                    let _v2: bool = _v0 < _v1;
                    if _v2 {
                        __state0 = 1;
                        continue '__dispatch0;
                    }
                }
                {
                    let _v3: i32 = n;
                    let _v4: i32 = 0;
                    let _v5: bool = _v3 == _v4;
                    if _v5 {
                        __state0 = 2;
                        continue '__dispatch0;
                    }
                }
                let _v6: i32 = 1;
                __retval = _v6;
                let _v7: i32 = __retval;
                return _v7;
            }
            1 => {
                let _v8: i32 = -1;
                __retval = _v8;
                let _v9: i32 = __retval;
                return _v9;
            }
            2 => {
                let _v10: i32 = 0;
                __retval = _v10;
                let _v11: i32 = __retval;
                return _v11;
            }
            _ => {
                unreachable!();
            }
        }
    }
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d %d %d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = -5;
    let _v3: i32 = classify(_v2);
    let _v4: i32 = 0;
    let _v5: i32 = classify(_v4);
    let _v6: i32 = 42;
    let _v7: i32 = classify(_v6);
    let _v8: i32 = unsafe { printf(_v1 as *const i8, _v3, _v5, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
