tests/snapshots/goto_switch_forward.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: i32 = 0;
    let mut r: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                let _v0: i32 = 0;
                __retval = _v0;
                let _v1: i32 = 2;
                x = _v1;
                let _v2: i32 = 0;
                r = _v2;
                {
                    let _v3: i32 = x;
                    {
                        let __switch_value1 = _v3;
                        let mut __switch_case1: i32 = match __switch_value1 { 1 => 0, 2 => 1, _ => 2 };
                        '__switch1: loop {
                            match __switch_case1 {
                                0 => {
                                    __state0 = 1;
                                    continue '__dispatch0;
                                }
                                1 => {
                                    __state0 = 2;
                                    continue '__dispatch0;
                                }
                                2 => {
                                    __state0 = 3;
                                    continue '__dispatch0;
                                }
                                _ => {
                                    break '__switch1;
                                }
                            }
                        }
                    }
                }
                __state0 = 1;
                continue '__dispatch0;
            }
            1 => {
                let _v4: i32 = 10;
                r = _v4;
                __state0 = 4;
                continue '__dispatch0;
            }
            2 => {
                let _v5: i32 = 20;
                r = _v5;
                __state0 = 4;
                continue '__dispatch0;
            }
            3 => {
                let _v6: i32 = 30;
                r = _v6;
                __state0 = 4;
                continue '__dispatch0;
            }
            4 => {
                let _v7: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
                let _v8: i32 = r;
                let _v9: i32 = unsafe { printf(_v7 as *const i8, _v8) };
                let _v10: i32 = 0;
                __retval = _v10;
                let _v11: i32 = __retval;
                std::process::exit(_v11 as i32);
            }
            _ => {
                break '__dispatch0;
            }
        }
    }
}
