tests/snapshots/heap_box_use_after_free_bailout.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn malloc(_0: usize) -> *mut core::ffi::c_void;
    fn free(_0: *mut core::ffi::c_void);
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: *mut i32 = std::ptr::null_mut();
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: u64 = 4;
    let _v2: *mut core::ffi::c_void = unsafe { malloc(_v1 as usize) };
    let _v3: *mut i32 = _v2 as *mut i32;
    x = _v3;
    let _v4: *mut i32 = x;
    let _v5: *mut core::ffi::c_void = _v4 as *mut core::ffi::c_void;
    unsafe { free(_v5 as *mut core::ffi::c_void) };
    let _v6: i32 = 4;
    let _v7: *mut i32 = x;
    unsafe {
        *_v7 = _v6;
    }
    let _v8: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v9: *mut i32 = x;
    let _v10: i32 = unsafe { *_v9 };
    let _v11: *mut i32 = x;
    let _v12: i32 = unsafe { *_v11 };
    let _v13: i32 = unsafe { printf(_v8 as *const i8, _v10, _v12) };
    let _v14: i32 = 0;
    __retval = _v14;
    let _v15: i32 = __retval;
    std::process::exit(_v15 as i32);
}
