tests/snapshots/heap_vec_malloc.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn malloc(_0: usize) -> *mut core::ffi::c_void;
    fn printf(_0: *const i8, ...) -> i32;
    fn free(_0: *mut core::ffi::c_void);
}

fn main() {
    let mut __retval: i32 = 0;
    let mut p: *mut i32 = std::ptr::null_mut();
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: u64 = 4;
    let _v2: u64 = 3;
    let _v3: u64 = _v1 * _v2;
    let _v4: *mut core::ffi::c_void = unsafe { malloc(_v3 as usize) };
    let _v5: *mut i32 = _v4 as *mut i32;
    p = _v5;
    let _v6: i32 = 1;
    let _v7: i64 = 0;
    let _v8: *mut i32 = p;
    let _v9: *mut i32 = unsafe { _v8.add(0) };
    unsafe {
        *_v9 = _v6;
    }
    let _v10: i32 = 2;
    let _v11: i64 = 1;
    let _v12: *mut i32 = p;
    let _v13: *mut i32 = unsafe { _v12.add(1) };
    unsafe {
        *_v13 = _v10;
    }
    let _v14: i32 = 3;
    let _v15: i64 = 2;
    let _v16: *mut i32 = p;
    let _v17: *mut i32 = unsafe { _v16.add(2) };
    unsafe {
        *_v17 = _v14;
    }
    let _v18: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v19: i64 = 0;
    let _v20: *mut i32 = p;
    let _v21: *mut i32 = unsafe { _v20.add(0) };
    let _v22: i32 = unsafe { *_v21 };
    let _v23: i64 = 1;
    let _v24: *mut i32 = p;
    let _v25: *mut i32 = unsafe { _v24.add(1) };
    let _v26: i32 = unsafe { *_v25 };
    let _v27: i32 = _v22 + _v26;
    let _v28: i64 = 2;
    let _v29: *mut i32 = p;
    let _v30: *mut i32 = unsafe { _v29.add(2) };
    let _v31: i32 = unsafe { *_v30 };
    let _v32: i32 = _v27 + _v31;
    let _v33: i32 = unsafe { printf(_v18 as *const i8, _v32) };
    let _v34: *mut i32 = p;
    let _v35: *mut core::ffi::c_void = _v34 as *mut core::ffi::c_void;
    unsafe { free(_v35 as *mut core::ffi::c_void) };
    let _v36: i32 = 0;
    __retval = _v36;
    let _v37: i32 = __retval;
    std::process::exit(_v37 as i32);
}
