tests/snapshots/indirect_call_enum_return_capture.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[allow(non_camel_case_types)]
#[derive(Clone, Copy, PartialEq, Eq, Debug, Hash)]
enum Status {
    E_OK = 0,
    E_FAIL = 1,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct Parser {
    processor: Option<unsafe extern "C" fn(i32) -> u32>,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn handle_ok(arg1: i32) -> u32 {
    let mut x: i32 = 0;
    let mut __retval: u32 = 0;
    x = arg1;
    let _v0: i32 = x;
    let _v1: u32 = Status::E_OK as u32;
    __retval = _v1;
    let _v2: u32 = __retval;
    return _v2;
}

extern "C" fn handle_fail(arg0: i32) -> u32 {
    let mut x: i32 = 0;
    let mut __retval: u32 = 0;
    x = arg0;
    let _v0: i32 = x;
    let _v1: u32 = Status::E_FAIL as u32;
    __retval = _v1;
    let _v2: u32 = __retval;
    return _v2;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut p: Parser = Parser { processor: None };
    let _v0: i32 = 0;
    __retval = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        loop {
            let _v2: i32 = i;
            let _v3: i32 = 2;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            {
                let mut result: aligned::Aligned<aligned::A4, Status> = aligned::Aligned(Status::E_OK);
                let _v5: i32 = i;
                let _v6: i32 = 0;
                let _v7: bool = _v5 == _v6;
                let _v8: Option<unsafe extern "C" fn(i32) -> u32> = if _v7 { Some(handle_ok) } else { Some(handle_fail) };
                p.processor = _v8;
                let _v9: Option<unsafe extern "C" fn(i32) -> u32> = p.processor;
                let _v10: i32 = 5;
                let _v11: u32 = unsafe { _v9.unwrap()(_v10) };
                *result = unsafe { std::mem::transmute(_v11) };
                {
                    let _v12: u32 = *result as u32;
                    let _v13: u32 = Status::E_OK as u32;
                    let _v14: bool = _v12 == _v13;
                    if _v14 {
                        let _v15: *mut i8 = b"ok\n\0".as_ptr() as *mut i8;
                        let _v16: i32 = unsafe { printf(_v15 as *const i8) };
                    } else {
                        let _v17: *mut i8 = b"fail\n\0".as_ptr() as *mut i8;
                        let _v18: i32 = unsafe { printf(_v17 as *const i8) };
                    }
                }
            }
            let _v19: i32 = i;
            let _v20: i32 = _v19 + 1;
            i = _v20;
        }
    }
    let _v21: i32 = 0;
    __retval = _v21;
    let _v22: i32 = __retval;
    std::process::exit(_v22 as i32);
}
