tests/snapshots/indirect_call_unwind_abi_propagation.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Ctx {
    run: Option<unsafe extern "C-unwind" fn(i32, i32)>,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct __slate_jmp_buf_tag {
    __regs: [i64; 8],
    __mask_was_saved: i32,
    __saved_mask: [u64; 16],
}


static mut env: aligned::Aligned<aligned::A16, [__slate_jmp_buf_tag; 1]> = aligned::Aligned([__slate_jmp_buf_tag { __regs: [0; 8], __mask_was_saved: 0, __saved_mask: [0; 16] }; 1]);

static mut failures: i32 = 0;

static mut g_callback: Option<unsafe extern "C-unwind" fn(i32)> = None;

unsafe extern "C" {
    fn setjmp(_0: *mut __slate_jmp_buf_tag) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
    fn longjmp(_0: *mut __slate_jmp_buf_tag, _1: i32) -> !;
}

extern "C-unwind" fn dispatcher(arg2: i32, arg3: i32) {
    let mut x: i32 = 0;
    let mut y: i32 = 0;
    x = arg2;
    y = arg3;
    let _v0: i32 = y;
    let _v1: Option<unsafe extern "C-unwind" fn(i32)> = unsafe { g_callback };
    let _v2: i32 = x;
    unsafe { _v1.unwrap()(_v2) };
    return;
}

extern "C-unwind" fn quiet_callback(arg1: i32) {
    let mut x: i32 = 0;
    x = arg1;
    let _v0: *mut i8 = b"quiet %d\n\0".as_ptr() as *mut i8;
    let _v1: i32 = x;
    let _v2: i32 = unsafe { printf(_v0 as *const i8, _v1) };
    return;
}

extern "C-unwind" fn panicky_callback(arg0: i32) {
    let mut x: i32 = 0;
    x = arg0;
    {
        let _v0: i32 = x;
        let _v1: i32 = 2;
        let _v2: bool = _v0 == _v1;
        if _v2 {
            let _v3: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
            let _v4: i32 = 1;
            std::panic::panic_any(__SlateJmpPayload_env { value: _v4 as i32 });
        }
    }
    let _v5: *mut i8 = b"panicky %d\n\0".as_ptr() as *mut i8;
    let _v6: i32 = x;
    let _v7: i32 = unsafe { printf(_v5 as *const i8, _v6) };
    return;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut c: Ctx = Ctx { run: None };
    let _v0: i32 = 0;
    __retval = _v0;
    c.run = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C-unwind" fn(i32, i32)>>(dispatcher as *const ()) };
    unsafe {
        g_callback = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C-unwind" fn(i32)>>(quiet_callback as *const ()) };
    }
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        '__loop0: loop {
            let _v2: i32 = i;
            let _v3: i32 = 2;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            '__continue0: {
                {
                    let _v5: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
                        let __sj__v6 = std::panic::catch_unwind(std::panic::AssertUnwindSafe(|| {
    let _v13: Option<unsafe extern "C-unwind" fn(i32, i32)> = c.run;
    let _v14: i32 = i;
    let _v15: i32 = 0;
    unsafe { _v13.unwrap()(_v14, _v15) };
}));
                        match __sj__v6 {
                            Ok(_) => {
                            }
                            Err(__sj_payload__v6) => {
                                    let _v6: i32 = match __sj_payload__v6.downcast::<__SlateJmpPayload_env>() { Ok(__sj_p) => __sj_p.value, Err(__sj_other) => std::panic::resume_unwind(__sj_other) };
                                let _v8: i32 = unsafe { failures };
                                let _v9: i32 = _v8 + 1;
                                unsafe {
                                    failures = _v9;
                                }
                                let _v10: *mut i8 = b"recovered quiet %d\n\0".as_ptr() as *mut i8;
                                let _v11: i32 = i;
                                let _v12: i32 = unsafe { printf(_v10 as *const i8, _v11) };
                                break '__continue0;
                            }
                        }
                }
            }
            let _v16: i32 = i;
            let _v17: i32 = _v16 + 1;
            i = _v17;
        }
    }
    unsafe {
        g_callback = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C-unwind" fn(i32)>>(panicky_callback as *const ()) };
    }
    {
        let mut i2: i32 = 0;
        let _v18: i32 = 0;
        i2 = _v18;
        '__loop1: loop {
            let _v19: i32 = i2;
            let _v20: i32 = 5;
            let _v21: bool = _v19 < _v20;
            if !_v21 {
                break;
            }
            '__continue1: {
                {
                    let _v22: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
                        let __sj__v23 = std::panic::catch_unwind(std::panic::AssertUnwindSafe(|| {
    let _v30: Option<unsafe extern "C-unwind" fn(i32, i32)> = c.run;
    let _v31: i32 = i2;
    let _v32: i32 = 0;
    unsafe { _v30.unwrap()(_v31, _v32) };
}));
                        match __sj__v23 {
                            Ok(_) => {
                            }
                            Err(__sj_payload__v23) => {
                                    let _v23: i32 = match __sj_payload__v23.downcast::<__SlateJmpPayload_env>() { Ok(__sj_p) => __sj_p.value, Err(__sj_other) => std::panic::resume_unwind(__sj_other) };
                                let _v25: i32 = unsafe { failures };
                                let _v26: i32 = _v25 + 1;
                                unsafe {
                                    failures = _v26;
                                }
                                let _v27: *mut i8 = b"recovered panicky %d\n\0".as_ptr() as *mut i8;
                                let _v28: i32 = i2;
                                let _v29: i32 = unsafe { printf(_v27 as *const i8, _v28) };
                                break '__continue1;
                            }
                        }
                }
            }
            let _v33: i32 = i2;
            let _v34: i32 = _v33 + 1;
            i2 = _v34;
        }
    }
    let _v35: *mut i8 = b"failures=%d\n\0".as_ptr() as *mut i8;
    let _v36: i32 = unsafe { failures };
    let _v37: i32 = unsafe { printf(_v35 as *const i8, _v36) };
    let _v38: i32 = 0;
    __retval = _v38;
    let _v39: i32 = __retval;
    std::process::exit(_v39 as i32);
}

struct __SlateJmpPayload_env {
    value: i32,
}
