tests/snapshots/int128_arith.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn add128(arg3: i128, arg4: i128) -> i128 {
    let mut a: i128 = 0;
    let mut b: i128 = 0;
    let mut __retval: i128 = 0;
    a = arg3;
    b = arg4;
    let _v0: i128 = a;
    let _v1: i128 = b;
    let _v2: i128 = _v0 + _v1;
    __retval = _v2;
    let _v3: i128 = __retval;
    return _v3;
}

fn print128(arg2: u128) {
    let mut v: u128 = 0;
    let mut hi: u64 = 0;
    let mut lo: u64 = 0;
    v = arg2;
    let _v0: u128 = v;
    let _v1: i32 = 64;
    let _v2: u128 = _v0 >> _v1;
    let _v3: u64 = _v2 as u64;
    hi = _v3;
    let _v4: u128 = v;
    let _v5: u64 = _v4 as u64;
    lo = _v5;
    let _v6: *mut i8 = b"%llu:%llu\n\0".as_ptr() as *mut i8;
    let _v7: u64 = hi;
    let _v8: u64 = lo;
    let _v9: i32 = unsafe { printf(_v6 as *const i8, _v7, _v8) };
    return;
}

fn mul128(arg0: u128, arg1: u128) -> u128 {
    let mut a: u128 = 0;
    let mut b: u128 = 0;
    let mut __retval: u128 = 0;
    a = arg0;
    b = arg1;
    let _v0: u128 = a;
    let _v1: u128 = b;
    let _v2: u128 = _v0 * _v1;
    __retval = _v2;
    let _v3: u128 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: i128 = 0;
    let mut b: i128 = 0;
    let mut sum: i128 = 0;
    let mut x: u128 = 0;
    let mut y: u128 = 0;
    let mut prod: u128 = 0;
    let mut cmp: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i128 = 9000000000000000000i128;
    a = _v1;
    let _v2: i128 = 9000000000000000000i128;
    b = _v2;
    let _v3: i128 = a;
    let _v4: i128 = b;
    let _v5: i128 = add128(_v3, _v4);
    sum = _v5;
    let _v6: i128 = sum;
    let _v7: u128 = _v6 as u128;
    print128(_v7);
    let _v8: u128 = 1000000000000u128;
    x = _v8;
    let _v9: u128 = 1000000000000u128;
    y = _v9;
    let _v10: u128 = x;
    let _v11: u128 = y;
    let _v12: u128 = mul128(_v10, _v11);
    prod = _v12;
    let _v13: u128 = prod;
    print128(_v13);
    let _v14: i128 = sum;
    let _v15: i128 = 0;
    let _v16: bool = _v14 > _v15;
    let _v17: i32 = 1;
    let _v18: i32 = 0;
    let _v19: i32 = if _v16 { _v17 } else { _v18 };
    cmp = _v19;
    let _v20: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v21: i32 = cmp;
    let _v22: i32 = unsafe { printf(_v20 as *const i8, _v21) };
    let _v23: i32 = 0;
    __retval = _v23;
    let _v24: i32 = __retval;
    std::process::exit(_v24 as i32);
}
