tests/snapshots/interprocedural_alloc_promotion_branches.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn malloc(_0: usize) -> *mut core::ffi::c_void;
    fn printf(_0: *const i8, ...) -> i32;
    fn free(_0: *mut core::ffi::c_void);
}

fn alloc() -> *mut i32 {
    let mut __retval: *mut i32 = std::ptr::null_mut();
    let _v0: u64 = 4;
    let _v1: u64 = 10;
    let _v2: u64 = _v0 * _v1;
    let _v3: *mut core::ffi::c_void = unsafe { malloc(_v2 as usize) };
    let _v4: *mut i32 = _v3 as *mut i32;
    __retval = _v4;
    let _v5: *mut i32 = __retval;
    return _v5;
}

fn a() -> *mut i32 {
    let mut __retval: *mut i32 = std::ptr::null_mut();
    let _v0: *mut i32 = alloc();
    __retval = _v0;
    let _v1: *mut i32 = __retval;
    return _v1;
}

fn b() -> *mut i32 {
    let mut __retval: *mut i32 = std::ptr::null_mut();
    {
        let _v0: i32 = 1;
        let _v1: bool = _v0 != 0;
        if _v1 {
            let _v2: *mut i32 = a();
            __retval = _v2;
            let _v3: *mut i32 = __retval;
            return _v3;
        }
    }
    let _v4: *mut i32 = alloc();
    __retval = _v4;
    let _v5: *mut i32 = __retval;
    return _v5;
}

fn c() -> *mut i32 {
    let mut __retval: *mut i32 = std::ptr::null_mut();
    let _v0: *mut i32 = b();
    __retval = _v0;
    let _v1: *mut i32 = __retval;
    return _v1;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: *mut i32 = std::ptr::null_mut();
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i32 = std::ptr::null_mut();
    x = _v1;
    let _v2: *mut i32 = c();
    x = _v2;
    let _v3: i32 = 10;
    let _v4: i64 = 0;
    let _v5: *mut i32 = x;
    let _v6: *mut i32 = unsafe { _v5.add(0) };
    unsafe {
        *_v6 = _v3;
    }
    let _v7: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v8: i64 = 0;
    let _v9: *mut i32 = x;
    let _v10: *mut i32 = unsafe { _v9.add(0) };
    let _v11: i32 = unsafe { *_v10 };
    let _v12: i32 = unsafe { printf(_v7 as *const i8, _v11) };
    let _v13: *mut i32 = x;
    let _v14: *mut core::ffi::c_void = _v13 as *mut core::ffi::c_void;
    unsafe { free(_v14 as *mut core::ffi::c_void) };
    let _v15: i32 = 0;
    __retval = _v15;
    let _v16: i32 = __retval;
    std::process::exit(_v16 as i32);
}
