tests/snapshots/libyaml_type_shapes.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct parser_t {
    read_handler: Option<unsafe extern "C" fn(*mut core::ffi::c_void, *mut u8, u64, *mut u64) -> i32>,
    read_handler_data: *mut core::ffi::c_void,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

extern "C" fn read_bytes(arg0: *mut core::ffi::c_void, arg1: *mut u8, arg2: u64, arg3: *mut u64) -> i32 {
    let mut data: *mut core::ffi::c_void = std::ptr::null_mut();
    let mut buffer: *mut u8 = std::ptr::null_mut();
    let mut size: u64 = 0;
    let mut size_read: *mut u64 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    let mut source: *mut u8 = std::ptr::null_mut();
    data = arg0;
    buffer = arg1;
    size = arg2;
    size_read = arg3;
    let _v0: *mut core::ffi::c_void = data;
    let _v1: *mut u8 = _v0 as *mut u8;
    source = _v1;
    {
        let mut i: u64 = 0;
        let _v2: u64 = 0;
        i = _v2;
        loop {
            let _v3: u64 = i;
            let _v4: u64 = size;
            let _v5: bool = _v3 < _v4;
            if !_v5 {
                break;
            }
            {
                let _v6: u64 = i;
                let _v7: *mut u8 = source;
                let _v8: *mut u8 = unsafe { _v7.add(_v6 as usize) };
                let _v9: u8 = unsafe { *_v8 };
                let _v10: u64 = i;
                let _v11: *mut u8 = buffer;
                let _v12: *mut u8 = unsafe { _v11.add(_v10 as usize) };
                unsafe {
                    *_v12 = _v9;
                }
            }
            let _v13: u64 = i;
            let _v14: u64 = _v13 + 1;
            i = _v14;
        }
    }
    let _v15: u64 = size;
    let _v16: *mut u64 = size_read;
    unsafe {
        *_v16 = _v15;
    }
    let _v17: i32 = 1;
    __retval = _v17;
    let _v18: i32 = __retval;
    return _v18;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut input: [u8; 4] = [0; 4];
    let mut tag: aligned::Aligned<aligned::A16, [u8; 22]> = aligned::Aligned([0; 22]);
    let mut buffer: [u8; 4] = [0; 4];
    let mut size_read: u64 = 0;
    let mut parser: parser_t = parser_t { read_handler: None, read_handler_data: std::ptr::null_mut() };
    let mut ok: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    input = [97, 98, 99, 0];
    *tag = [116, 97, 103, 58, 121, 97, 109, 108, 46, 111, 114, 103, 44, 50, 48, 48, 50, 58, 115, 116, 114, 0];
    buffer = [0, 0, 0, 0];
    let _v1: u64 = 0;
    size_read = _v1;
    parser.read_handler = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(*mut core::ffi::c_void, *mut u8, u64, *mut u64) -> i32>>(read_bytes as *const ()) };
    let _v2: *mut u8 = input.as_mut_ptr() as *mut u8;
    let _v3: *mut core::ffi::c_void = _v2 as *mut core::ffi::c_void;
    parser.read_handler_data = _v3;
    let _v4: Option<unsafe extern "C" fn(*mut core::ffi::c_void, *mut u8, u64, *mut u64) -> i32> = parser.read_handler;
    let _v5: *mut core::ffi::c_void = parser.read_handler_data;
    let _v6: *mut u8 = buffer.as_mut_ptr() as *mut u8;
    let _v7: u64 = 3;
    let _v8: i32 = unsafe { _v4.unwrap()(_v5, _v6, _v7, std::ptr::addr_of_mut!(size_read)) };
    ok = _v8;
    let _v9: *mut i8 = b"%d %lu %c %c\n\0".as_ptr() as *mut i8;
    let _v10: i32 = ok;
    let _v11: u64 = size_read;
    let _v12: i64 = 1;
    let _v13: u8 = buffer[(_v12 as usize)];
    let _v14: i32 = _v13 as i32;
    let _v15: i64 = 4;
    let _v16: u8 = tag[(_v15 as usize)];
    let _v17: i32 = _v16 as i32;
    let _v18: i32 = unsafe { printf(_v9 as *const i8, _v10, _v11, _v14, _v17) };
    let _v19: i32 = 0;
    __retval = _v19;
    let _v20: i32 = __retval;
    std::process::exit(_v20 as i32);
}
